Turned on deep sleep

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,3 +4,8 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 CONFIG_ZMK_DISPLAY=y
+
+# Idling and deep sleep settings
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
